# PROJET_GESTIONNAIRE_DE_CHARGE

./: .~lock.BTS_CIEL_E6_IR_DOSSIER_DE_VALIDATION_PROJET___GESTIONNAIRE_DE_CHARGE_DE_VEHICULE_ELECTRIQUE.ODT#  .~lock.DOSSIERCONCEPTION.ODT#  .~lock.Dossier_Conception.odt#  BTS_CIEL_E6_IR_DOSSIER_DE_VALIDATION_PROJET___GESTIONNAIRE_DE_CHARGE_DE_VEHICULE_ELECTRIQUE.ODT  DOSSIERCONCEPTION.ODT  DiagrammeGANTT.odt  Diagramme_exigences.xcf  Diapo_revue1_projet.odp  Dossier_revue1.odt  ElementsPersoDossierAnalyse.odt  ExempleDiagrammeProcessus.odt  F1-Description des cas d'utilisation.odt  F1tableau.odt  F4-BilanEntreesSorties.odt  F5_Mocodo.odt  F6_CHOIX_TECHNOLOGIQUES-2.ODT.odt  Online Gantt 20260213.gantt  README.md  Sans nom 1.odt  diagramme_dexigence.xcf  index.html  index.php  package.json  prjet_git  secours_main_qml  tarif_elec
Capteurs/: BranchementconnectiviteCapteurs.odt  CodeZMTP101bsurVS.odt
Controleurs/: controleur.php  loginControlleur.php
F1/: .~lock.F1-Description des cas d'utilisation.odt#  F1-Description des cas d'utilisation.odt  F1_Description_Cas_Utilisation.odt
F2-Diagramme_de_sequence/: Memoriser_les_parametres_de_charges  Notifier_en_cas_d_alertes
F3 - Diagramme de classes/: F3_Diagramme_de_Classe
F4/: .~lock.F4-Bilan des Entrées et Sortie.odt#  .~lock.Tableau_entrees_sorties.odt#  F4-Bilan des Entrées et Sortie.odt  Tableau_entrees_sorties.odt
F4 - Bilan Entrée&Sorties/: .~lock.F4-BilanEntreesSorties.odt#
F5-Analyse_des_donnees/: .~lock.F5_Mocodo.odt#  F5_DiagrammeCommunication  F5_Mocodo.odt
F6/: 1737445457FICHE_6___CHOIX_TECHNOLOGIQUES(1).ODT  FICHE_6___CHOIX_TECHNOLOGIQUES.ODT
F8/: .~lock.FICHE_8___DEFINIR_L___ARCHITECTURE_MATERIELLE_ET_LOGICIELLE_DU_SYSTEME.ODT#  FICHE_8___DEFINIR_L___ARCHITECTURE_MATERIELLE_ET_LOGICIELLE_DU_SYSTEME.ODT
F8 - Architecture Matérielle et logicielle/: F8_DEFINIR_L_ARCHITECTURE_MATERIELLE_ET_LOGICIELLE_DU_SYSTEME.ODT
Modeles/: config.inc.php  journalisation.php  modele.php
PROJET/: AppCard.qml  AppTextField.qml  BootPage.qml  CMakeLists.txt  KmPage.qml  Main.qml  StatusPage.qml  VehiculesPage.qml  communicationesp.cpp  communicationesp.h  communicationraspi.cpp  communicationraspi.h  communicationtemp.cpp  communicationtemp.h  logique.js  main.cpp
Projet_GestionnaireDeCharge/: 1683185259CONFIG_PLATFORMIO.ODP  CahierDesCharges.ODT  Dossier_revue1.odt  bddespr32.odt  test.ODT
RaspberryPi/: mdp_et_bdd_raspberry  mdp_raspberry
RaspberryPi/Code/serveur_esp32_proto/: CMakeLists.txt  main.cpp  serveur.cpp  serveur.h
Ressources/: .~lock.1766137023BTS_CIEL_E6_IR_DOSSIER_DE_VALIDATION_PROJET___GESTIONNAIRE_DE_CHARGE_DE_VEHICULE_ELECTRIQUE.ODT#  mesurePuissance.cpp
Revues/: .~lock.DiapoRevue1_VR.odp#
ServeurSimulation/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Test/: fiche_de_test.odt
TrucHarold/: Revue 1.odp
TrucsCorentin/: .~lock.Dossier_Conception.odt#
Vues/: VueClient.php  choix_borne.php  creer_compte.php  gestion_utilisateurs.php  graphique.php  login.php  modifier_utilisateur.php
docs/: Projet_Gestionnaire_de_charge.odt  modifsProjet
nbproject/: project.xml
revue1/: DOSSIERCONCEPTION.ODT
revue2/: FICHEDETEST.ODT
src/: App.tsx  index.css
(+93 files in other folders)
